Updated container width and fixed row alignment issues

--- a/app/assets/stylesheets/partials/_base.css.scss
+++ b/app/assets/stylesheets/partials/_base.css.scss
@@ -29,7 +29,7 @@ body, html {
 }
 
 .container {
-  width: 90%;
+  width: 85%;
 }
 
 .popover{
